--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-APP_NAME=finance
+APP_NAME=app
 APP_ENV=development
 APP_KEY=
 APP_DEBUG=true
@@ -11,10 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=finance
-DB_SCHEMA=finance
+DB_DATABASE=postgres
+DB_SCHEMA=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
