--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.7"
 
 services:
-    # image finance
-    finance:
+    # image app
+    app:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: finance
         restart: unless-stopped
         working_dir: /var/www/
         volumes:
@@ -35,10 +34,10 @@ services:
         container_name: postgres
         restart: unless-stopped
         environment:
-            POSTGRES_DB: ${DB_DATABASE:-finance}
-            POSTGRES_USER: ${DB_USERNAME:-finance}
+            POSTGRES_DB: ${DB_DATABASE:-postgres}
+            POSTGRES_USER: ${DB_USERNAME:-postgres}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
-            POSTGRES_SCHEMA: ${DB_SCHEMA:-finance}
+            POSTGRES_SCHEMA: ${DB_SCHEMA:-public}
         volumes:
             - ./.docker/postgresql:/var/lib/postgresql
         ports:
@@ -56,7 +55,7 @@ services:
             - ./:/var/www
         depends_on:
             - redis
-            - finance
+            - app
         networks:
             - laravel
 
