--- a/.env.development
+++ b/.env.development
@@ -14,7 +14,7 @@ DB_PORT=5432
 DB_DATABASE=postgres
 DB_SCHEMA=postgres
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=postgres
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
