--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         environment:
             POSTGRES_DB: ${DB_DATABASE:-postgres}
             POSTGRES_USER: ${DB_USERNAME:-postgres}
-            POSTGRES_PASSWORD: ${DB_PASSWORD}
+            POSTGRES_PASSWORD: ${DB_PASSWORD-postgres}
             POSTGRES_SCHEMA: ${DB_SCHEMA:-public}
         volumes:
             - ./.docker/postgresql:/var/lib/postgresql
