--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     queue:
         image: php:8.3
         container_name: queue
-        restart: no
+        restart: unless-stopped
         command: "php artisan queue:work"
         volumes:
             - ./:/var/www
