--- a/.env.development
+++ b/.env.development
@@ -12,7 +12,7 @@ DB_CONNECTION=pgsql
 DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=postgres
-DB_SCHEMA=postgres
+DB_SCHEMA=
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
