--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,7 @@ SESSION_SECURE_COOKIE=1
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=redis
 REDIS_PORT=6379
 
